--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
-    "seed": "node backend/seed.js
+    "dev": "nodemon backend/server.js",
+    "seed": "node backend/seed.js"
   },
   "repository": {
     "type": "git",
