--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-# MongoDB Connection String
-# For MongoDB Atlas, use the connection string you copied earlier
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/luxe-store?retryWrites=true&w=majority
 
+MONGODB_URI=mongodb://localhost:27017/luxe-store
 # For Local MongoDB
-# MONGODB_URI=mongodb://localhost:27017/luxe-store
+
 
 # Server Configuration
 PORT=5000
